[gd_scene load_steps=5 format=3 uid="uid://cxhs8qy5ilufv"]

[ext_resource type="Script" path="res://src/UI/ReferenceImages/ReferencesPanel.gd" id="1"]
[ext_resource type="Script" path="res://src/UI/Nodes/ValueSlider.gd" id="2_1qu4x"]
[ext_resource type="Script" path="res://src/UI/ReferenceImages/ReferenceEditPanel.gd" id="2_xxb1y"]
[ext_resource type="PackedScene" uid="uid://yjhp0ssng2mp" path="res://src/UI/Nodes/ValueSlider.tscn" id="3_1w6gu"]

[node name="Reference Images" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Header" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HSeparator2" type="HSeparator" parent="Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Header"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Reference Images"

[node name="HSeparator" type="HSeparator" parent="Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="."]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
text = "When opening an image, it may be imported as a reference."
autowrap_mode = 2

[node name="ReferenceImages" type="ScrollContainer" parent="."]
layout_mode = 2
horizontal_scroll_mode = 2
vertical_scroll_mode = 0

[node name="List" type="HBoxContainer" parent="ReferenceImages"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="ReferenceEditPanel" type="PanelContainer" parent="."]
layout_mode = 2
script = ExtResource("2_xxb1y")

[node name="ReferenceEdit" type="VBoxContainer" parent="ReferenceEditPanel"]
layout_mode = 2

[node name="ImageOptions" type="HBoxContainer" parent="ReferenceEditPanel/ReferenceEdit"]
layout_mode = 2

[node name="WarningLabel" type="Label" parent="ReferenceEditPanel/ReferenceEdit/ImageOptions"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.972549, 1, 0.545098, 1)
text = "Image not found!"
text_overrun_behavior = 3

[node name="ImagePath" type="Button" parent="ReferenceEditPanel/ReferenceEdit/ImageOptions"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
text = "Image Path"
alignment = 0
text_overrun_behavior = 3

[node name="Remove" type="Button" parent="ReferenceEditPanel/ReferenceEdit/ImageOptions"]
layout_mode = 2
tooltip_text = "Hold Shift while pressing to instantly remove."
theme_override_colors/font_color = Color(1, 0.490196, 0.419608, 1)
text = "Remove"

[node name="HSeparator" type="HSeparator" parent="ReferenceEditPanel/ReferenceEdit"]
layout_mode = 2

[node name="Tools" type="HBoxContainer" parent="ReferenceEditPanel/ReferenceEdit"]
layout_mode = 2

[node name="Filter" type="CheckButton" parent="ReferenceEditPanel/ReferenceEdit/Tools"]
layout_mode = 2
size_flags_horizontal = 3
text = "Filter"

[node name="HSeparator2" type="HSeparator" parent="ReferenceEditPanel/ReferenceEdit"]
layout_mode = 2

[node name="Options" type="GridContainer" parent="ReferenceEditPanel/ReferenceEdit"]
layout_mode = 2
size_flags_horizontal = 3
columns = 2

[node name="TransformLabel" type="Label" parent="ReferenceEditPanel/ReferenceEdit/Options"]
layout_mode = 2
text = "Transform"

[node name="Reset" type="Button" parent="ReferenceEditPanel/ReferenceEdit/Options"]
layout_mode = 2
text = "Reset Transform"

[node name="PosLabel" type="Label" parent="ReferenceEditPanel/ReferenceEdit/Options"]
custom_minimum_size = Vector2(115, 0)
layout_mode = 2
text = "Position"

[node name="Position" type="HBoxContainer" parent="ReferenceEditPanel/ReferenceEdit/Options"]
layout_mode = 2
size_flags_horizontal = 3

[node name="X" parent="ReferenceEditPanel/ReferenceEdit/Options/Position" instance=ExtResource("3_1w6gu")]
layout_mode = 2
allow_greater = true
allow_lesser = true

[node name="Y" parent="ReferenceEditPanel/ReferenceEdit/Options/Position" instance=ExtResource("3_1w6gu")]
layout_mode = 2
allow_greater = true
allow_lesser = true

[node name="ScaleLabel" type="Label" parent="ReferenceEditPanel/ReferenceEdit/Options"]
custom_minimum_size = Vector2(115, 0)
layout_mode = 2
text = "Scale"

[node name="Scale" parent="ReferenceEditPanel/ReferenceEdit/Options" instance=ExtResource("3_1w6gu")]
layout_mode = 2
allow_greater = true
allow_lesser = true

[node name="RotationLabel" type="Label" parent="ReferenceEditPanel/ReferenceEdit/Options"]
custom_minimum_size = Vector2(115, 0)
layout_mode = 2
text = "Rotation"

[node name="Rotation" parent="ReferenceEditPanel/ReferenceEdit/Options" instance=ExtResource("3_1w6gu")]
layout_mode = 2
min_value = -180.0
max_value = 180.0

[node name="ColorLabel" type="Label" parent="ReferenceEditPanel/ReferenceEdit/Options"]
layout_mode = 2
text = "Color Options"

[node name="Spacer2" type="Control" parent="ReferenceEditPanel/ReferenceEdit/Options"]
layout_mode = 2

[node name="MonochromeLabel" type="Label" parent="ReferenceEditPanel/ReferenceEdit/Options"]
custom_minimum_size = Vector2(115, 0)
layout_mode = 2
text = "Monochrome"

[node name="Monochrome" type="CheckButton" parent="ReferenceEditPanel/ReferenceEdit/Options"]
layout_mode = 2
size_flags_horizontal = 3
text = "Enabled"

[node name="OverlayLabel" type="Label" parent="ReferenceEditPanel/ReferenceEdit/Options"]
custom_minimum_size = Vector2(115, 0)
layout_mode = 2
text = "Overlay"

[node name="Overlay" type="ColorPickerButton" parent="ReferenceEditPanel/ReferenceEdit/Options"]
custom_minimum_size = Vector2(48, 28)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25
edit_alpha = false

[node name="OpacityLabel" type="Label" parent="ReferenceEditPanel/ReferenceEdit/Options"]
custom_minimum_size = Vector2(115, 0)
layout_mode = 2
text = "Opacity"

[node name="Opacity" parent="ReferenceEditPanel/ReferenceEdit/Options" instance=ExtResource("3_1w6gu")]
layout_mode = 2

[node name="ColorClampingLabel" type="Label" parent="ReferenceEditPanel/ReferenceEdit/Options"]
custom_minimum_size = Vector2(115, 0)
layout_mode = 2
text = "Color Clamping"

[node name="ColorClamping" type="TextureProgressBar" parent="ReferenceEditPanel/ReferenceEdit/Options"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 2
theme_type_variation = &"ValueSlider"
nine_patch_stretch = true
stretch_margin_left = 3
stretch_margin_top = 3
stretch_margin_right = 3
stretch_margin_bottom = 3
script = ExtResource("2_1qu4x")

[node name="Timer" type="Timer" parent="ReferenceEditPanel"]
wait_time = 0.2
one_shot = true

[connection signal="pressed" from="ReferenceEditPanel/ReferenceEdit/ImageOptions/Remove" to="ReferenceEditPanel" method="_on_Remove_pressed"]
[connection signal="toggled" from="ReferenceEditPanel/ReferenceEdit/Tools/Filter" to="ReferenceEditPanel" method="_on_Filter_toggled"]
[connection signal="pressed" from="ReferenceEditPanel/ReferenceEdit/Options/Reset" to="ReferenceEditPanel" method="_on_Reset_pressed"]
[connection signal="value_changed" from="ReferenceEditPanel/ReferenceEdit/Options/Position/X" to="ReferenceEditPanel" method="_on_X_value_changed"]
[connection signal="value_changed" from="ReferenceEditPanel/ReferenceEdit/Options/Position/Y" to="ReferenceEditPanel" method="_on_Y_value_changed"]
[connection signal="value_changed" from="ReferenceEditPanel/ReferenceEdit/Options/Scale" to="ReferenceEditPanel" method="_on_Scale_value_changed"]
[connection signal="value_changed" from="ReferenceEditPanel/ReferenceEdit/Options/Rotation" to="ReferenceEditPanel" method="_on_Rotation_value_changed"]
[connection signal="toggled" from="ReferenceEditPanel/ReferenceEdit/Options/Monochrome" to="ReferenceEditPanel" method="_on_Monochrome_toggled"]
[connection signal="color_changed" from="ReferenceEditPanel/ReferenceEdit/Options/Overlay" to="ReferenceEditPanel" method="_on_Overlay_color_changed"]
[connection signal="value_changed" from="ReferenceEditPanel/ReferenceEdit/Options/Opacity" to="ReferenceEditPanel" method="_on_Opacity_value_changed"]
[connection signal="value_changed" from="ReferenceEditPanel/ReferenceEdit/Options/ColorClamping" to="ReferenceEditPanel" method="_on_ColorClamping_value_changed"]
[connection signal="timeout" from="ReferenceEditPanel/Timer" to="ReferenceEditPanel" method="_on_timer_timeout"]
